--- a/src/main/resources/templates/report/allStudent.html
+++ b/src/main/resources/templates/report/allStudent.html
@@ -2,76 +2,70 @@
 <html lang="en" >
 <!--Styles, meta data, and title are included-->
 <head data-th-replace="~{fragments/header :: headerFragment}" >
-    <meta charset="UTF-8" >
-    <title >Success Student Management System</title >
+  <meta charset="UTF-8" >
+  <title >Success Student Management System</title >
 </head >
 <body >
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
 <div class="row bg-light" >
-    <div class="col-4" ></div >
-    <div class="col-4" >
-        <h1 >Student Management</h1 >
-    </div >
-    <div class="col-4" ><a href="/report/student" >
-        <button class="btn btn-primary" >Register a new Student</button >
-    </a ></div >
+  <div class="col-4" ></div >
+  <div class="col-4" >
+    <h1 >All Student </h1 >
+  </div >
+  <div class="col-4" ></div >
 </div >
 
+<div class="row text-center" >
+  <div class="col-4" >
+    <a href="/report/student" class="btn btn-outline-info" >All Student</a >
+  </div >
+  <div class="col-4" >
+    <a href="/report/student/grade" class="btn btn-outline-secondary" >According to Grade</a >
+  </div >
+  <div class="col-4" >
+    <a href="/report/student/batch" class="btn btn-outline-primary" >According to Batch</a >
+  </div >
+</div >
 <div class="row" >
-    <div class="container-fluid">
-        <div data-th-fragment="studentsFragment" >
-            <table class="table table-striped table-inverse" id="myTable" >
-                <thead class="thead-inverse" >
-                <tr >
-                    <th >Index</th >
-                    <th >Registration ID</th >
-                    <th >First Name</th >
-<!--                    <th >Gender</th >-->
-<!--                    <th >School</th >-->
-<!--                    <th >Guardian</th >-->
-<!--                    <th >Mobile Number</th >-->
-<!--                    <th >Home Number</th >-->
-                    <th >Remark</th >
-                </tr >
-                </thead >
-                <tbody >
-                <tr data-th-each="student, index : ${students}" >
-                    <td data-th-text="${index.count}" ></td >
-                    <td data-th-text="${student.regNo}" ></td >
-                    <td data-th-text="${student.firstName}" ></td >
-<!--                    <td data-th-text="${student.gender}" ></td >-->
-<!--                    <td data-th-text="${student.school.name}" ></td >-->
-<!--                    <td data-th-text="${student.guardian}" ></td >-->
-<!--                    <td data-th-text="${student.mobile}" ></td >-->
-<!--                    <td data-th-text="${student.home}" ></td >-->
-                    <td data-th-if="${!studentRemoveBatch}" >
-                        <a data-th-href="${'/student/view/'+ student.id}" >
-                            <button class="btn btn-info" >View</button >
-                        </a >
-<!--                        <a data-th-href="${'/student/edit/'+ student.id}" >-->
-<!--                            <button class="btn btn-success" >Update</button >-->
-<!--                        </a >-->
-<!--                        <a data-th-href="${'/student/delete/'+ student.id}" >-->
-<!--                            <button class="btn btn-danger" >Delete</button >-->
-<!--                        </a >-->
-                    </td >
-<!--                    <td data-th-if="${studentRemoveBatch}" >-->
-<!--                        <a data-th-href="${'/student/view/'+ student.id}" >-->
-<!--                            <button class="btn btn-info" >View</button >-->
-<!--                        </a >-->
-<!--                        <form action="/batchStudent/removeBatch" method="post">-->
-<!--                            <input type="hidden" name="batch" data-th-value="${batchDetail.id}" >-->
-<!--                            <input type="hidden" name="student" data-th-value="${student.id}" >-->
-<!--                            <button type="submit" class="btn btn-danger" >Remove</button >-->
-<!--                        </form >-->
-<!--                    </td >-->
-                </tr >
-                </tbody >
-            </table >
-        </div >
-    </div>
+  <div class="container-fluid" >
+    <div data-th-fragment="studentsFragment" >
+      <table class="table table-striped table-inverse" id="myTable" >
+        <thead class="thead-inverse" >
+        <tr >
+          <th >Index</th >
+          <th >Registration ID</th >
+          <th >First Name</th >
+          <th >Gender</th >
+          <th >School</th >
+          <th >Guardian</th >
+          <th >Mobile Number</th >
+          <th >Home Number</th >
+          <th >Remark</th >
+        </tr >
+        </thead >
+        <tbody >
+        <tr data-th-each="student, index : ${allStudents}" >
+          <td data-th-text="${index.count}" ></td >
+          <td data-th-text="${student.regNo}" ></td >
+          <td data-th-text="${student.firstName}" ></td >
+          <td data-th-text="${student.gender.gender}" ></td >
+          <td data-th-text="${student.school.name}" ></td >
+          <td data-th-text="${student.guardian}" ></td >
+          <td data-th-text="${student.mobile}" ></td >
+          <td data-th-text="${student.home}" ></td >
+          <td >
+            <a data-th-href="${'/student/view/'+ student.id}" >
+              <button class="btn btn-info" >View</button >
+            </a >
+
+          </td >
+        </tr >
+        </tbody >
+      </table >
+    </div >
+  </div >
 
 </div >
 
