payment for period was updated

--- a/src/main/resources/templates/report/paymentsForPeriod.html
+++ b/src/main/resources/templates/report/paymentsForPeriod.html
@@ -33,7 +33,7 @@
     <div class="collapse mx-auto" id="dataTargetCollapse" >
       <div class="container-fluid text-center" >
         <div class="row" >
-          <form class="form-inline" data-th-action="${'/report/income'}" data-th-method="POST" >
+          <form class="form-inline" data-th-action="${'/report/payment'}" data-th-method="POST" >
             <div class="form-group mr-2" >
               <label for="startDate" >FROM :</label >
               <input class="form-control" id="startDate" name="startDate" type="date" />
